--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="" type="image/x-icon">
-    <link rel="stylesheet" type='text/css' href="styles/style.css">
+    <link rel="stylesheet" type='text/css' href="style.css">
     <!-- <script src="my-js-file.js" defer></script> -->
     <title>The Flyer Zone</title>
   </head>
