--- a/about.html
+++ b/about.html
@@ -10,15 +10,18 @@
   </head>
 
   <body>
+
+    <div id="aboutDiv">
+
 <h1>Welcome to the Flyer Zone</h1>
 
 <p>
 Hello!<br>
 This site is a tentative towards platform divestment and uhhhh lets say digital rewilding. Of the community, I guess. As @ContentFactoryFarm on tw put it, "Pre-facebook events Halifax just had a long scrolling webpage of show posters, basically a digital telephone pole, and it worked great."
 Yeah, sounds like it would work great! Anyways, if this expands at all I don't mind making a couple extra tabs so that event flyers can be filtered by city. Right now, it's mtl centric baybee.</p>
-<p>If you have a Flyer you would like to circulate, please email theflyerzone@gmail.com with an image, 72 dpi (please), in pdf, jpg, png, or gif if u fancy. MP4 if u mf fancy but lets keep the site weight down, ey?<br><br>
+<p>If you have a Flyer you would like to circulate, please email theflyerzone@gmail.com with an image, 72 dpi (please), in .pdf, .jpg, .png, or .gif if u fancy. .mp4 if u mf fancy but lets keep the site weight down, ey?<br><br>
 bisous & happy linking</p>
-
+</div>
 
   </body>
 </html>
