added some stuff

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="smiley.ico" type="image/x-icon">
     <link rel="stylesheet" type='text/css' href="style.css">
     <!-- <script src="my-js-file.js" defer></script> -->
     <title>The Flyer Zone</title>
   </head>
 
-  <body>
+  <body id='mainBody'>
+    <a href='about.html'>About</a>
 
-
-
+<div id='flyerDiv'>
+<img class='flyer'src="DONGEON2.png" title="This will be the Dongeon's inaugural showcase! byob ;)" alt="10 ave des pins #114 july 11 2021 5-9 pm..... an interactive installation!">
+</div>
   </body>
 </html>
