--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   </head>
 
   <body id='aboutBody'>
-    <a href='index.html'>Flyers Home</a>
+    <a href='flyerzone.fun'>Flyers Home</a>
 
     <div id="aboutDiv">
 
